Bug 1258236 - Change the way we test for end-of-stream in ReadHeapSnapshot; r=sfink

Fold reading the size of the next message and testing whether the stream has
more data into the same operation.

MozReview-Commit-ID: GUJymKy7qsj